# Transpectra-AI

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yml  requirements.txt  start.sh
app/: agent.py  bot.py  main.py  schemas.py
app/models/: model_loader.py
app/routers/: bot.py  products.py  resource_optimizer.py  route_optimizer.py  stock_forecast.py
app/tools/: airways.py  hlpe.py  mcp_server.py  railways.py  roadways.py  seaways.py
chats/: test.db
