[project]
name = "gdg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "joblib>=1.5.0",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "prophet>=1.1.6",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.2",
]

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload --host localhost --port 8000"

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

